<resources>
    <string name="app_name">Nice Wallpapers</string>
    <string name="app_name_random">Random Wallpapers</string>
    <string name="action_settings">Settings</string>
    <string name="edit_text_hint">Type a flickr tag…</string>
    <string name="button_label">Search</string>
    <string name="search">Search</string>
    <string name="action_use_as">Use as</string>
    <string name="action_crop">Crop</string>
    <string name="action_blur">Blur</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="categories">Categories</string>
    <string name="oem_wallpapers">OEM Wallpapers</string>
    <string name="cars_girl"><![CDATA[Cars & Girl]]></string>
    <string name="super_hero_villian">Super Hero &amp; Villain</string>
    <string name="material_wallpapers">Material Wallpapers</string>
    <string name="animals">Animals</string>
    <string name="black_white">Black &amp; White</string>
    <string name="editor_choice">Editor\'s choice</string>
    <string name="bing_allery">Bing Gallery</string>
    <string name="community">Community</string>
    <string name="download_complete">Download complete</string>
    <string name="time_download" formatted="false">%d:%d</string>
    <string name="has_been_download">This wallpaper has been downloader!</string>
    <string name="set_wallpaper_successfully">Set wallpaper successfully!</string>
    <string name="save">Save</string>
    <string name="use_as">Use as</string>
    <string name="confirm_delete">Do you want to delete this wallpaper?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="to_day">Today</string>
    <string name="please_wait_change_wallpaper">Please wait some seconds to change wallpaper</string>
    <string name="download">Downloaded</string>
    <string name="random_history">Random History</string>
    <string name="blur">Blur</string>
    <string name="radius">Radius:</string>
    <string name="save_set_wallpaper"><![CDATA[Save & set wallpaper]]></string>
    <string name="please_wait">Please Wait!</string>
    <string name="other">Other</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="auto_change_wallpaper">Auto change wallpaper</string>
    <string name="auto_change">Auto change</string>
    <string name="duration">Duration</string>
    <string name="hours">%d Hour(s)</string>
    <string name="blur_history">Blur History</string>

    <string name="banner_ad_unit_id">ca-app-pub-7495408087739651/6700837329</string>
    <string name="banner_ad_unit_id_fb">630892297081769_630901037080895</string>
    <string name="ad_unit_id">ca-app-pub-5654056907058952/6918328828</string>
    <string name="ad_unit_id_fb">630892297081769_630892527081746</string>
    <string name="can_not_load">Can\'t load wallpaper!</string>
    <string name="no_wallpaper">No wallpaper!</string>
    <string name="over_wifi">Only over WiFi</string>
    <string name="over_wifi_description">Auto change wallpaper with WiFi ONLY</string>

    <string name="feedback_email">pizzapp2016@gmail.com</string>
    <string name="feedback_email_title">[Nice Wallpapers] Subscribe for feedback, update, help…</string>
    <string name="error_load_wallpaper">Error load wallpaper!</string>
    <string name="choose_sources">Choose Sources</string>
    <string name="choose_sources_description">Choose sources to random wallpaper</string>
    <string name="dim">Dim</string>
    <string name="gray">Gray</string>
    <string name="action_set_wallpapers">Set Wallpapers</string>
    <string name="unavailable_app">Unavailable app</string>
</resources>
