<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.callapplication.MainActivity">
    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_get_app_white_24dp"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_view"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_set_wallpapers"
                android:icon="@drawable/ic_wallpaper_grey_600_24dp"
                android:title="@string/action_set_wallpapers"
                app:showAsAction="always" />
            <item
                android:id="@+id/action_use_as"
                android:icon="@drawable/ic_dialpad_grey_600_24dp"
                android:title="@string/action_use_as"
                app:showAsAction="always" />

            <item
                android:id="@+id/action_blur"
                android:icon="@drawable/ic_blur_on_grey_600_24dp"
                android:title="@string/action_blur"
                app:showAsAction="always" />
            <item
                android:id="@+id/action_delete"
                android:icon="@drawable/ic_delete_grey_600_24dp"
                android:title="@string/delete"
                app:showAsAction="always" />
        </menu>
    </item>
</menu>
