<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="?android:progressBarStyleSmallInverse"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:singleLine="true"
        android:text="@string/other"
        android:textColor="@color/white"
        android:textSize="@dimen/text_15" />

    <TextView
        android:id="@+id/tvHelpFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_row"
        android:padding="20dp"
        android:singleLine="true"
        android:text="@string/help_feedback"
        android:textColor="@color/white"
        android:textSize="@dimen/text_15" />

    <TextView
        android:id="@+id/tvShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_row"
        android:padding="20dp"
        android:singleLine="true"
        android:text="@string/share"
        android:textColor="@color/white"
        android:textSize="@dimen/text_15" />

    <TextView
        android:id="@+id/tvRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_row"
        android:padding="20dp"
        android:singleLine="true"
        android:text="@string/rate"
        android:textColor="@color/white"
        android:textSize="@dimen/text_15" />
</LinearLayout>
