<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewMainDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:padding="20dp"
        android:singleLine="true"
        android:text="@string/choose_sources"
        android:textColor="@color/white"
        android:textSize="@dimen/text_15"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_line" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewChooseSources"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_row"
            android:paddingBottom="15dp"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/green_700"
            android:textSize="@dimen/text_15" />

        <TextView
            android:id="@+id/tvOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_row"
            android:paddingBottom="15dp"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/green_700"
            android:textSize="@dimen/text_15" />
    </LinearLayout>
</LinearLayout>